responsive weather app

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://purepng.com/public/uploads/large/purepng.com-weather-iconsymbolsiconsapple-iosiosios-8-iconsios-8-721522596142qx4ep.png" type="image/png">
     <title>Weather App</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+   <link rel="stylesheet"href= "https://fonts.googleapis.com/css?family=Trirong">
+   
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -12,7 +16,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <i class="fas fa-cloud-sun"></i>
+                <img src="./weather.png" alt="WeatherNow Logo"style="width: 60px; height: 60px;">
                 <span>WeatherNow</span>
             </div>
             <div class="search-bar">
